--- a/templates/404.html
+++ b/templates/404.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 {% block body %}
 	<h1>Oh No, I lost you!</h1>
-	<p>It looks like you are a little lost.  Please feel free to use the links on the left side to get to where you're going.  :)</p>
+	<p>It looks like you are a little lost.  Please feel free to use the links on the left side to get to where you're going.</p>
 {% endblock %}
