--- a/static/style.css
+++ b/static/style.css
@@ -5,6 +5,8 @@ h1, h2          { margin: 0; }
 h1              { font-size: 1.6em;}
 h2              { font-size: 1.2em; }
 
+a#side:hover { color: #000; }
+
 div#header
 {
   font-family: 'Lucida Grande', sans-serif;
@@ -20,9 +22,8 @@ div#nav
   width: 8.5em;
   border: 1px;
   border-radius: 15px;
-  /*border-style: solid;
-  /*background-color: #A9DECF;*/
-  text-shadow: 1px 1px 2px #999;
+  /*border-style: solid;*/
+  background-color: #f2d488;
   box-shadow: 1px 1px 5px #999;
 }
 
@@ -54,11 +55,16 @@ div#content
 
 div#rnav 
 {
-  margin-top: 25px;
-  margin-left: 10em;
-  margin-right: 15em;
-  border: 10px;
-  width: 40em;
+  float: left;
+  position: relative;
+  top: 50px;
+  left: 5px;
+  width: 8.5em;
+  border: 1px;
+  border-radius: 15px;
+  /*border-style: solid;*/
+  background-color: #f2d488;
+  box-shadow: 1px 1px 5px #999;
 }
 
 div#footer
@@ -67,7 +73,7 @@ div#footer
   font-size: .75em;
 }
 
-.page           { margin: 1em auto; width: 55em; border: 6px solid #daa520;
+.page           { margin: 1em auto; width: 60em; border: 6px solid #daa520;
                   padding: 0.8em; background: #E6DFE1; overflow: auto; min-height: 39em;}
 .entries        { list-style: none; margin: 0; padding: 0; }
 .entries li     { margin: 0.8em 1.2em; }
