--- a/static/style.css
+++ b/static/style.css
@@ -17,7 +17,7 @@ div#nav
 {
   float: left;
   position: relative;
-  top: 85px;
+  top: 80px;
   left: 5px;
   width: 8.5em;
   border: 1px;
@@ -55,11 +55,9 @@ div#content
 
 div#rnav 
 {
-  float: left;
-  position: relative;
+  float: right;
   top: 50px;
   left: 5px;
-  width: 8.5em;
   border: 1px;
   border-radius: 15px;
   /*border-style: solid;*/
